<resources>
    <string name="app_name">CS 310 \t Letitia Napitupulu</string>
    <string name="clock">\uD83D\uDD53</string>
    <string name="flag">\uD83D\uDEA9</string>
    <string name="mine">\uD83D\uDCA3</string>
    <string name="pick">\u26CF</string>
    <string name="default_count">0</string>
    <string name="flag_count">4</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="final_message">Good job!</string>
    <string name="final_result">You won.</string>
    <string name="no_seconds">Used 0 seconds.</string>
</resources>