<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout

        android:id="@+id/gridLayout01"
        android:layout_width="302dp"
        android:layout_height="384dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text=""
        app:columnCount="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616"
        app:rowCount="10">


    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:layout_width="281dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:width="64dp"
            android:height="64dp"
            android:text="@string/flag"
            android:textAlignment="center"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/flagcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:width="64dp"
            android:height="64dp"
            android:text="@string/flag_count"
            android:textAlignment="center"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:width="64dp"
            android:height="64dp"
            android:text="@string/clock"
            android:textAlignment="center"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:width="64dp"
            android:height="64dp"
            android:text="@string/default_count"
            android:textAlignment="center"
            android:textSize="32sp" />

    </LinearLayout>

    <ToggleButton
        android:id="@+id/mymode"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:checked="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textOff="@string/flag"
        android:textOn="@string/pick"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout01"
        app:layout_constraintVertical_bias="0.172" />


</androidx.constraintlayout.widget.ConstraintLayout>